# pr_toolbox_python

./: README.md  env.example  main.py  pyproject.toml
app/: __init__.py
app/models/: pr_models.py
app/services/: github_service.py  openai_service.py  pr_review_service.py
app/utils/: pr_classifier.py
templates/: README.md
templates/dashboard/: dashboard-content.html  index.html
templates/pr-description/: pr-description-content.html  pr-description-result.html  pr-description.html
templates/pr-review/: pr-review-content.html  pr-review-result.html  pr-review.html
templates/shared/: base.html
templates/user/: user-list.html
