[project]
name = "pr-toolbox-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fasthx[jinja]>=2.3.3",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
]
